# chesnok_uz

./: README.md  main.py  pyproject.toml
app/: database.py  models.py
