[project]
name = "chesnok-uz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.1.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
